# vamp-js

./: .travis.yml  CMakeLists.txt  README.md  build.sh
TestVampHost/: TestUtilities.cpp  catch.hpp  fixture_expected_ps.h  fixture_expected_sin.h  fixture_expected_tempo.h  fixture_expected_zc.h  testIntegrationAudioStreams.cpp  testMap.cpp  testSineGenerator.cpp  testSndFileAudioStream.cpp
basic-vamp-host/: AudioStream.h  FeatureSetFormatter.h  FixedTempoEstimator.h  RawDataAudioStream.cpp  RawDataAudioStream.h  SimpleFeatureSetFormatter.cpp  SimpleFeatureSetFormatter.h  SndFileAudioStream.cpp  SndFileAudioStream.h  VampHost.cpp  VampHost.h  ZeroCrossing.cpp  ZeroCrossing.h  main.cpp  vamp-simple-host.cpp
basic-vamp-host.xcodeproj/: project.pbxproj
basic-vamp-host.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
basic-vamp-host.xcodeproj/xcuserdata/lucas.xcuserdatad/xcschemes/: basic-vamp-host.xcscheme  xcschememanagement.plist
emscripten/: Makefile  Vamp.js  Vamp.js.mem  VampJsBindings.cpp  buildScript.sh
emscripten/ext/test/: build-basic-vamp-host.sh  expected-fixed-tempo-detection-function.txt  expected-power-spectrum.txt
emscripten/plugins/pyin/: MonoPitchHMM.cpp  PYinVamp.cpp  Yin.cpp  YinUtil.cpp
emscripten/test/: SineData.js  test-sin.js
examples/web-audio/: Vamp.js  Vamp.js.mem  VampExample.js  index.html  spectrogram.html  zero-crossings.html
src/: AudioStream.h  FeatureSetFormatter.h  FixedTempoEstimator.cpp  JsonFeatureSetFormatter.cpp  JsonFeatureSetFormatter.h  PowerSpectrum.h  SimpleFeatureSetFormatter.cpp  SimpleFeatureSetFormatter.h  SndFileAudioStream.h  VampHost.cpp  VampHost.h  main.cpp  vamp-simple-host.cpp
test/: TestUtilities.cpp  TestUtilities.h  main.cpp  testIntegrationAudioStreams.cpp  testIntegrationRawDataAudioStream.cpp  testIntegrationSndFileAudioStream.cpp  testJsonFeatureSetFormatter.cpp  testRawDataAudioStream.cpp  testSineGenerator.cpp
test/fixtures/: expected_ps.h
